Issue IMCMS-781 Analysis of system defects: - Fix interaction with cache in ImageService